--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ Documents
 Figures/Fig_prep.pptx
 *.docx
 abi9949_Blinded_Review_Report_seq1_v2.pdf
+EU_early.png
+EU_mid.png
+lat_am_early.png
+lat_am_mid.png
+spi_am_map.png
